src/test/testFiles/invalid/semanticErrors/redeclaredParameterInFunction.manimdsl
fun function(x: number, x: number): number {
    let z: number = x + x;
    return z;
}

let z = 0;